--- a/gtt2.html
+++ b/gtt2.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-<h1>Orari dei Pulman</h1>
+<h1>Orari dei Bus</h1>
 
 <label for="stop">Inserisci fermata:</label>
 <input type="text" id="stop" name="stop">
